added th ip to circimvate a DNS issue with the use of .local

--- a/snips-satelite/snips-docker/snips.toml
+++ b/snips-satelite/snips-docker/snips.toml
@@ -1,6 +1,6 @@
 [snips-common]
 # bus = "mqtt"
-mqtt = "home-server.local:1883"
+mqtt = "192.168.178.92:1883"
 # audio = ["+@mqtt"]
 # assistant = "/usr/share/snips/assistant"
 # user_dir = "/var/lib/snips"
